@@ -1,10 +1,12 @@
 Revision history for Net-XMPP2
 
 0.14
-         - fixed small bug in simple_component
+         - applied fixes from git://github.com/melo/net--xmpp2.git
+           branch component-reply-with-from.
+         - fixed small bug in simple_component.
          - fixed a debugging bug in the drain method of SimpleConnection,
            where the written data wasn't passed to the debugging events.
-         - improved the documentation a bit and fixed typos
+         - improved the documentation a bit and fixed typos.
 
 0.13 Tue Apr 15 13:07:02 CEST 2008
          - added a 'send_buffer_empty' event, to be able to wait
